# tauri-plugin-egui

./: CLAUDE.md  Cargo.toml  README.md
examples/vanilla/public/: index.html
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/src/: lib.rs  main.rs
src/: desktop.rs  error.rs  lib.rs  models.rs  plugin.rs  renderer.rs  utils.rs  window.rs
