[package]
name = "tauri-plugin-egui"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-egui"

[dependencies]
tauri = { version = "2.6.2" }
tauri-runtime = { version = "2.6.2" }
tauri-runtime-wry = { version = "2.6.2" }
serde = "1.0"
thiserror = "2"
egui = "0.30"
egui-wgpu = "0.30"
wgpu = "23"
parking_lot = "0.12"
raw-window-handle = "0.6"

[build-dependencies]
tauri-plugin = { version = "2.3.0", features = ["build"] }
