[package]
name = "tauri-plugin-egui"
version = "0.1.0"
authors = [ "Siddharth <siddharth99c@gmail.com>" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-egui"

[dependencies]
tauri = { version = "2.6.2" }
tauri-runtime = { version = "2.6.2" }
tauri-runtime-wry = { version = "2.6.2" }
raw-window-handle = "0.6"
anyhow = "1.0.98"
serde = "1.0"
wgpu = "23"
egui = "0.30"
egui-wgpu = "0.30"

[build-dependencies]
tauri-plugin = { version = "2.3.0", features = ["build"] }
