[package]
name = "tauri-plugin-egui"
version = "0.1.0"
authors = [ "Siddharth <siddharth99c@gmail.com>" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-egui"

[dependencies]
tauri = { git = "https://github.com/clearlysid/tauri", branch = "patch-pub-runtime-wry" }
tauri-runtime = { git = "https://github.com/clearlysid/tauri", branch = "patch-pub-runtime-wry" }
tauri-runtime-wry = { git = "https://github.com/clearlysid/tauri", branch = "patch-pub-runtime-wry" }
raw-window-handle = "0.6"
anyhow = "1.0.98"
serde = "1.0"
wgpu = "25"
egui = "0.32"
egui-wgpu = "0.32"

[build-dependencies]
tauri-plugin = { version = "2.3.0", features = ["build"] }

[workspace]
members = ["examples/vanilla/src-tauri"]
