[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3.0", default-features = false , features = [] }

[dependencies]
tauri = { git = "https://github.com/clearlysid/tauri", branch = "patch-pub-runtime-wry", features = ["macos-private-api", "unstable"] }
tauri-plugin-egui = { path = "../../../" }
